style/style.css
body {
    font-family: sans-serif;
    padding: 10px;
    background: #f1f1f1;
}

/* Header/Blog Title */
.header {
    padding-bottom: 52px;
    padding-top: 12px;
    /* margin-bottom: 20px; */
    width: 100%;
    height: 32px;
    font-size: 20px;
    text-align: center;
    background: white;
}
/* Create two unequal columns that floats next to each other */
/* Left column */
.leftcolumn {
    float: left;
    width: 69%;
    /* padding: 1%; */
}

/* Right column */
.rightcolumn {
    float: right;
    width: 30%;
    /* padding: 1%; */
}

.rightcolumn img {
    background-color: #aaa;
    width: 90%;
}

/* Add a card effect for articles */
.card {
    background-color: white;
    margin-top: 20px;
    padding: 5%;
}

/* Clear floats after the columns */
.row:after {
    content: '';
    display: table;
    clear: both;
}

/* Footer */
.footer {
    padding: 20px;
    text-align: center;
    background: #ddd;
    margin-top: 20px;
}

/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
@media screen and (max-width: 800px) {
    .leftcolumn {
        padding: 2%;
        width: 95%;
    }

    .rightcolumn {
        float: none;
        padding: 2%;
        width: 95%;
    }
}

